--- a/ReactProjetoRayana/src/App.css
+++ b/ReactProjetoRayana/src/App.css
@@ -12,24 +12,24 @@
 h1 {
   text-align: center;
   font-family: "Bebas Neue", sans-serif;
-  font-size: 45px;
-  font-weight: 40;
+  font-size: 38px;
+ 
   font-style: normal;
   color: #ffffff;
-  text-shadow: 0 0 6px black;
+  text-shadow: 0 2px black;
   margin-top: 30px;
-  margin-bottom: 70px;
-  border-bottom: 2px solid #ffffff; 
   padding-bottom: 0px;
 }
 
 h2 {
   text-align: center;
-  font-size: 32px;
-  color: #000000;
-  margin-bottom: 20px;
+  font-size: 28px;
+  text-shadow: 0 2px black;
+  color: #ffffff;
+  margin-top: 0px;
+  border-bottom: solid rgb(255, 255, 255);
   font-weight: 700;
-  margin: 8px;
+  
 }
 
 h4 {
